# MiniProjects

./: .env  .gitignore  ChatGPT.py  Crypto.py  DownloadYoutube.py  Drive.py  ExtractImages.py  ExtractImagesEPUB.py  ObsCountDown.py  Relationaspect.py  RemoveDuplicates.py  UnZip.py  WhatsappAPI.py  requirements-drive.txt  requirements-img.txt
AudioProcess/: processed_files.json  reductor.py
Crypto/: Crypto.py
Drive/: Drive.py
Drive/sources/: token.json.enc
Excel2Image/: excel2image.py  requirements.txt
ExtractImages/: ExtractImages.py  requirements.txt
RelationAspect/: Relationaspect.py
RemoveDuplicates/: RemoveDuplicates.py
RenameFiles/: RenameFiles.py
SendMessage/: .sermon_links_cache.json  constants.py  models.py  requirements.txt  sender.py  test.py  whatsapp.py
YouTubeDownload/: DownloadYoutube.py
YoutubeDownloader2/: __init__.py  audio.py  cli.py  config.py  core.py  downloader.py  events.py  metadata.py  pyproject.toml  reports.py  requirements.txt  result.py  search.py  song.json  state.py  utils.py
sources/: client_secret.json  client_secret.json.enc  password.key  token.json
