[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytdl-core"
version = "2.0.0"
description = "Batch audio downloader with composite scoring, AcoustID fingerprint verification, and MusicBrainz enrichment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Juan Cardona", email = "juanblandon975@gmail.com" }
]
keywords = ["youtube", "download", "music", "audio", "yt-dlp", "acoustid"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Internet",
]

dependencies = [
    "yt-dlp>=2024.1.0",
    "mutagen>=1.47",
    "requests>=2.31",
    "musicbrainzngs>=0.7",
    "rapidfuzz>=3.6",
    "pyacoustid>=1.3",
    "pydub>=0.25",
]

[project.optional-dependencies]
cli = [
    "rich>=13.7",
    "click>=8.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
ytdl = "ytdl_core.cli:main"

[project.urls]
Repository = "https://github.com/Juanes72/YoutubeDownloader"
Issues     = "https://github.com/Juanes72/YoutubeDownloader/issues"

[tool.hatch.build.targets.wheel]
packages = ["ytdl_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true